--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
     "prepare": "husky install",
+    "cypress:open": "cypress open",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:e2e": "start-server-and-test dev 3000 cypress:open"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint --cache",
@@ -40,8 +42,10 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "cypress": "^9.6.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
@@ -50,6 +54,7 @@
     "miragejs": "^0.1.43",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
+    "start-server-and-test": "^1.14.0",
     "vue-jest": "^3.0.4"
   }
 }
