--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12.18.x
+          node-version: 14.x.x
 
       - uses: actions/cache@v2
         id: yarn-cache
