--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,8 +36,5 @@ jobs:
       - name: Run Linter
         run: yarn lint
 
-      - name: Comment with Test Coverage
-        uses: dkershner6/jest-coverage-commenter-action@v1
-        with:
-          github_token: '${{ secrets.GITHUB_TOKEN }}'
-          test_command: 'yarn test:coverage'
+      - name: Run tests 🧪
+        run: yarn test
