--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "flush-promises": "^1.0.2",
-    "husky": "^7.0.4",
+    "husky": "^8.0.2",
     "jest": "^27.4.4",
     "lint-staged": "^12.1.2",
     "miragejs": "^0.1.43",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "start-server-and-test": "^1.14.0",
     "vue-jest": "^3.0.4"
   }
